 * 詳細表示にフォーカスがある場合にIEのショートカットが動作してしまっていたのを修正
 * 詳細表示でSHIFT+F5キーまたはSHIFT+Rキーを押した場合に通常の更新として動作していたバグを修正(遡るのが正しい)
 * スペースキーを押したままにしてスペースの連続が入力された場合にも未読ジャンプするようにした（判定タイミングは従来の通りキー入力を止めたときです）
 * 発言のないタブでソート順変更をしようとするとクラッシュするのを修正(0.9.2.3のみ。それ以外のバージョンでは問題ありません)
 * moi.stのURL展開に対応
 * タブ名入力ダイアログで正しくキャンセルできない場合があるバグを修正
 * 編集メニューの抽出条件入力について、PublicSearchタブ以外では無効にするようにした
 * 認証エラーの場合にエラー内容を表示するようにした
==== Ver 0.9.2.3(2010/06/14)
 * DM送信で複数行を考慮していなかったのを修正(開発版のみ。安定版では問題ありません)
 * 画像プレビューで未対応画像形式のチェックをするようにした
 * ハッシュタグマネージャで大文字小文字を区別せずに扱うようにした
 * パスワードを設定するミスが多いため、設定画面をOKで閉じる際にbit.lyのアカウント情報が正しいかどうか検証するようにした
 * Ctrl+フルキー数字でタブのダイレクト選択ができるようにした。Ctrl+1～8で左端からのタブを選択、Ctrl+9で最後尾タブ選択。
 * in_reply_to_status_idの付いた発言で、reply元の発言をキーで追いかけられるようにした。 [でreply元発言へジャンプ、]で元の書き込みへ戻る。(thx @__park)
 * ソート方法を切り替えたときに現在選択している発言が変更されないようにした
 * アイコン変更の際のファイル名フィルタを変更した
 * @あるいは#の入力後にCtrl+Spaceを押すことで補完ダイアログを呼び出せるようにした
 * 投稿がDMかどうかを判定する正規表現のミスにより、一部の発言ができなかったバグを修正（開発版のみ。安定版では問題ありません）
 * 投稿内容が"."で始まっていた場合にin_reply_toを付加しないようにした。以前は". "で始まっていた場合のみin_reply_toを消していました。
 * 発言詳細からリンクを外部アプリケーションにドラッグできなくなっていた不具合を修正(0.9.2.2のみ。安定版では問題ありません）
 * 発言詳細で右クリックから「全ユーザーのフォロー状態」で、表示されている@IDのフォロー状況を順次確認し、リムーブするかどうかの確認を出すようにした
 * 入力欄でのCtrl+Shift+T以外の方法によってハッシュタグを切り替えた場合に文字数カウント表示が反映されていなかったバグを修正
 * プロフィール画面でのユーザーアイコン表示をWebのユーザーページと同じ73×73ピクセルに修正
 * プロフィール画面からブロック、スパム報告が行えるようにした。事前に確認ダイアログが出ます。
 * プロフィール画面からのフォロー解除の際に確認を行うようにした
 * 公式RTされた発言をSTOTコピーまたはステータスURLコピーした場合にRT元発言を指すURLを生成するように変更
 * アイコン非同期取得の際のタイムアウト時間を調整
 * 「その他機能」にプロフィール表示を復活させた。IDをダイアログで指定することができます。
==== Ver 0.9.2.2(2010/06/05)
 * 発言数・Followers/Following数をタイトルに表示するオプションの選択肢を追加
 * アイコンイメージのキー重複で取得ポストが追加されないバグ修正(0.9.2.1で発生 安定版では発生しません)
 * タブ種別が正しく取得できないことがあるバグ修正。これによりListsタブなどが作成できないことがある不具合が修正されます。
 * DMが送信できないバグ修正(0.9.2.1で発生 安定版では発生しません)
 * 詳細表示のアイコンダブルクリックでホームを開けなくなっていたのを修正(0.9.2.1で発生 安定版では発生しません)
 * IDN形式の短縮URLを発言詳細部でクリックした時、開けなかった問題を修正
 * プロフィール画面から編集を可能にした
 * プロフィール画面からアイコンを変更可能にした。Twitterの仕様により次回発言しないと変更が成功しているか確認できません。
 * タブメニューのショートカットが効かない場合がある不具合修正